[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Scripts/GeneralScripts/Spring.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/TileSets/General Objects/RedSprings.png" type="Texture" id=3]




[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "Normal",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Push",
"speed": 35.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "Push"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Push" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Normal" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 13 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 9 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16, 3 )

[node name="RedSpring" type="Node2D"]
script = ExtResource( 1 )
push_force = 700

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 9 )
animation = "Normal"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_speed = 3.0
anims/Push = SubResource( 10 )
anims/Stop = SubResource( 11 )

[node name="ActivateArea" type="Area2D" parent="."]
position = Vector2( 0, -20 )
__meta__ = {
"_edit_group_": true
}

[node name="ActivateTrigger" type="CollisionShape2D" parent="ActivateArea"]
shape = SubResource( 12 )

[node name="Body" type="StaticBody2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 7 )
shape = SubResource( 13 )

[node name="JumpArea" type="Area2D" parent="Body"]

[node name="JumpCollide" type="CollisionShape2D" parent="Body/JumpArea"]
position = Vector2( 0, -3 )
shape = SubResource( 14 )
disabled = true
one_way_collision = true
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="ActivateArea" to="." method="_on_ActivateArea_body_entered"]
[connection signal="body_exited" from="ActivateArea" to="." method="_on_ActivateArea_body_exited"]
[connection signal="body_entered" from="Body/JumpArea" to="." method="_on_JumpArea_body_entered"]
